updated notebook and reqirements for eland

--- a/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
+++ b/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
@@ -42,34 +42,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "2Xz9uWQFbNkH",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "97c84633-4fdf-4c40-c224-0d9705f40573"
+        "id": "2Xz9uWQFbNkH"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/165.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m165.8/165.8 kB\u001b[0m \u001b[31m4.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m523.3/523.3 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.1/12.1 MB\u001b[0m \u001b[31m35.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m64.4/64.4 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "cudf-cu12 24.4.1 requires pandas<2.2.2dev0,>=2.0, but you have pandas 1.5.3 which is incompatible.\n",
-            "google-colab 1.0.0 requires pandas==2.1.4, but you have pandas 1.5.3 which is incompatible.\n",
-            "xarray 2024.6.0 requires pandas>=2.0, but you have pandas 1.5.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#!pip install -qU elasticsearch\n",
-        "!pip install -qU eland[pytorch]\n"
+        "#!pip install -qU eland[pytorch]"
       ]
     },
     {
@@ -220,32 +200,10 @@
         "check_endpoint.body"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n3Yk7rgYhP-N",
-        "outputId": "f16f52f3-510b-4205-9b13-05300461024d"
+        "id": "n3Yk7rgYhP-N"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'endpoints': [{'model_id': 'semantic-reranking',\n",
-              "   'inference_id': 'semantic-reranking',\n",
-              "   'task_type': 'rerank',\n",
-              "   'service': 'elasticsearch',\n",
-              "   'service_settings': {'num_allocations': 8,\n",
-              "    'num_threads': 1,\n",
-              "    'model_id': 'cross-encoder__ms-marco-minilm-l-6-v2'},\n",
-              "   'task_settings': {'return_documents': True}}]}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
