Fixing reranker query

--- a/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
+++ b/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
@@ -248,36 +248,66 @@
         "USER_QUESTION = \"Where can I get good pizza?\"\n",
         "\n",
         "response = es.search(\n",
-        "    index=\"rstaurant_reviews\",\n",
+        "    index=\"restaurant_reviews\",\n",
         "    body={\n",
         "      \"retriever\": {\n",
-        "        \"text_similarity_reranker\": {\n",
-        "          \"retriever\": {\n",
-        "            \"standard\": {\n",
+        "    \"text_similarity_reranker\": {\n",
+        "      \"retriever\": {\n",
+        "        \"standard\": {\n",
+        "          \"query\": {\n",
+        "            \"nested\": {\n",
+        "              \"path\": \"semantic_body.inference.chunks\",\n",
         "              \"query\": {\n",
-        "                \"match\": {\n",
-        "                  \"review\": USER_QUESTION\n",
+        "                \"sparse_vector\": {\n",
+        "                  \"inference_id\": \"my-elser-endpoint\",\n",
+        "                  \"field\": \"semantic_body.inference.chunks.embeddings\",\n",
+        "                  \"query\": USER_QUESTION\n",
         "                }\n",
+        "              },\n",
+        "              \"inner_hits\": {\n",
+        "                \"size\": 2,\n",
+        "                \"name\": \"restaurant_reviews.semantic_body\",\n",
+        "                \"_source\": [\n",
+        "                  \"semantic_body.inference.chunks.text\"\n",
+        "                ]\n",
         "              }\n",
         "            }\n",
-        "          },\n",
-        "          \"field\": \"review\",\n",
-        "          \"inference_id\": \"semantic-reranking\",\n",
-        "          \"inference_text\": USER_QUESTION,\n",
-        "          \"rank_window_size\": 20,\n",
-        "          \"min_score\": 0.4\n",
+        "          }\n",
         "        }\n",
         "      },\n",
-        "      \"_source\": \"false\",\n",
-        "      \"fields\": [\n",
-        "        \"review\",\n",
-        "        \"restaurant\"\n",
-        "      ]\n",
+        "      \"field\": \"Review\",\n",
+        "      \"inference_id\": \"semantic-reranking\",\n",
+        "      \"inference_text\": USER_QUESTION\n",
         "    }\n",
-        ")"
+        "  }\n",
+        "    }\n",
+        ")\n",
+        "\n",
+        "response.raw"
       ],
       "metadata": {
         "id": "HWXQBS35jQ3n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Print out the formatted response"
+      ],
+      "metadata": {
+        "id": "A0HyNZoWyeun"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for review in response.raw['hits']['hits']:\n",
+        "    print(f\"Restaurant {review['_source']['Restaurant']} - Rating: {review['_source']['Rating']} - Reviewer: {review['_source']['Reviewer']}\")\n"
+      ],
+      "metadata": {
+        "id": "4ZEx-46rn3in"
       },
       "execution_count": null,
       "outputs": []
