updating rerank notebooks

--- a/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
+++ b/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
@@ -236,7 +236,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Test query with reranking\n"
+        "# Query with Reranking"
       ],
       "metadata": {
         "id": "2bwvzLfRjJ2n"
@@ -277,7 +277,8 @@
         "      },\n",
         "      \"field\": \"Review\",\n",
         "      \"inference_id\": \"semantic-reranking\",\n",
-        "      \"inference_text\": USER_QUESTION\n",
+        "      \"inference_text\": USER_QUESTION,\n",
+        "      \"rank_window_size\": 50\n",
         "    }\n",
         "  }\n",
         "    }\n",
