--- a/vectordb-genai-101/Associate_GenAI_Certification_Challenge_7.ipynb
+++ b/vectordb-genai-101/Associate_GenAI_Certification_Challenge_7.ipynb
@@ -182,12 +182,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Verify it was created\n",
+        "## Verify\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "X8rQXMrHhMkS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Verify the endpoint was created\n",
+        "\n",
+        "\n",
         "\n",
         "You should see JSON output with information about the semantic endpoint"
       ],
       "metadata": {
-        "id": "X8rQXMrHhMkS"
+        "id": "VdzHo58lgYEe"
       }
     },
     {
@@ -236,10 +248,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Test query with reranking\n"
+        "# Query with Reranking"
       ],
       "metadata": {
         "id": "2bwvzLfRjJ2n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Complete the following query.\n",
+        "\n",
+        "This will user retrievers to:\n",
+        "1. Perform a semantic query against the chunked ELSER embeddings\n",
+        "2. Return the top 2 inner hit chunks\n",
+        "3. Perform a reranking using our previously created reranking API and model"
+      ],
+      "metadata": {
+        "id": "ET2cwx1-hUuj"
       }
     },
     {
@@ -275,6 +301,7 @@
         "              }\n",
         "            }\n",
         "          },\n",
+        "        # Complete the missing argument\n",
         "        # Complete the missing argument\n",
         "        # Complete the missing argument\n",
         "        \"inference_text\": USER_QUESTION\n",
