updating rerank notebooks

--- a/vectordb-genai-101/Associate_GenAI_Certification_Challenge_7.ipynb
+++ b/vectordb-genai-101/Associate_GenAI_Certification_Challenge_7.ipynb
@@ -271,6 +271,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Two Stage Retriever <- Do Not Delete\n",
+        "\n",
         "USER_QUESTION = \"Where can I get good pizza?\"\n",
         "\n",
         "response = es.search(\n",
@@ -307,7 +309,6 @@
         "        \"inference_text\": USER_QUESTION\n",
         "        }\n",
         "      }\n",
-        "    }\n",
         ")\n",
         "\n",
         "response.raw"
