--- a/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
+++ b/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,7 +17,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**Locally Hosted Semantic Reranker**"
+      ],
       "metadata": {
         "id": "bW9q8qD_bPhY"
       }
@@ -24,7 +27,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Setup"
+        "# Objectives\n",
+        "\n",
+        "In this challenge you will:\n",
+        "- Learn how to load a semantic reranker into Elasticsearch with Eland\n",
+        "- Create a reranker inference API\n",
+        "- Modify the query to use the reranker as part of the query to gather contextual documents"
+      ],
+      "metadata": {
+        "id": "Mf09mgBb5Bb9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## If this is your first time using Jupyter notebook:\n",
+        "\n",
+        "<img src=\"https://play.instruqt.com/assets/tracks/xh4efwjkleh1/9de47748dceadc1b6546908519ea4ba6/assets/CleanShot%202024-09-12%20at%2014.06.51%402x.png\" width=\"150\"/>\n",
+        "Click the small play icon to the left of the cell<br>\n",
+        "\n",
+        "<img src=\"https://play.instruqt.com/assets/tracks/xh4efwjkleh1/f7949234f997ba39ff8879304648efaa/assets/CleanShot%202024-09-12%20at%2014.07.22%402x.png\" width=\"150\"/>\n",
+        "If the cell runs successfully you will see a green check markt at the bottom left in the cell<br>\n",
+        "\n",
+        "<img src=\"https://play.instruqt.com/assets/tracks/xh4efwjkleh1/0fd068121e9d48f13b49d8e02a21fe42/assets/CleanShot%202024-09-12%20at%2014.09.32%402x.png\" width=\"150\"/>\n",
+        "If there is an error, you will see a red x and may see error output below"
+      ],
+      "metadata": {
+        "id": "hn5LrtoIrzBs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Setup\n",
+        "\n",
+        "Run the cells in this section to:\n",
+        "- Import the required libraries\n",
+        "- Create an elasticsearch python client connection\n"
       ],
       "metadata": {
         "id": "BecBOzyDbWik"
@@ -103,21 +142,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Upload Hugging Face model with Eland"
+        "# Upload Hugging Face model with Eland\n",
+        "Run this cell to:\n",
+        "- Upload the model from Hugging Face to Elasticsearch\n",
+        "- Use Eland's `eland_import_hub_model` command to upload the model to Elasticsearch.\n",
+        "\n",
+        "For this example we've chosen the [`cross-encoder/ms-marco-MiniLM-L-6-v2`](https://huggingface.co/cross-encoder/ms-marco-MiniLM-L-6-v2) text similarity model.\n",
+        "<br><br>\n",
+        "**Note**:\n",
+        "While we are importing the model for use as a reranker, Eland and Elasticsearch do not have a dedicated rerank task type, so we still use `text_similarity`"
       ],
       "metadata": {
         "id": "5bsLLnqCfNKk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Use Eland's `eland_import_hub_model` command to upload the model to Elasticsearch.\n",
-        "\n",
-        "For this example we've chosen the [`cross-encoder/ms-marco-MiniLM-L-6-v2`](https://huggingface.co/cross-encoder/ms-marco-MiniLM-L-6-v2) text similarity model."
-      ],
-      "metadata": {
-        "id": "jptAAe4dfaah"
       }
     },
     {
@@ -142,7 +178,19 @@
       "cell_type": "markdown",
       "source": [
         "# Create Inference Endpoint\n",
-        "We need to create an endpoint queries can use for reranking"
+        "Run this cell to:\n",
+        "- Create an inference Endpoint\n",
+        "- Deploy the reranking model we impoted in the previous section\n",
+        "We need to create an endpoint queries can use for reranking\n",
+        "\n",
+        "Key points about the `model_config`\n",
+        "- `service` - in this case `elasticsearch` will tell the inference API to use a locally hosted (in Elasticsearch) model\n",
+        "- `num_allocations` sets the number of allocations to 1\n",
+        "    - Allocations are independent units of work for NLP tasks. Scaling this allows for an increase in concurrent throughput\n",
+        "- `num_threads` - sets the number of threads per allocation to 1\n",
+        "    - Threads per allocation affect the number of threads used by each allocation during inference. Scaling this generally increased the speed of inference requests (to a point).\n",
+        "- `model_id` - This is the id of the model as it is named in Elasticsearch\n",
+        "\n"
       ],
       "metadata": {
         "id": "-rrQV6SAgWz8"
@@ -182,7 +230,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Verify it was created\n",
+        "###Verify it was created\n",
+        "\n",
+        "- Run the two cells in this section to verify:\n",
+        "- The Inference Endpoint has been completed\n",
+        "- The model has been deployed\n",
         "\n",
         "You should see JSON output with information about the semantic endpoint"
       ],
@@ -210,7 +262,7 @@
       "source": [
         "Verify the model was successfully deployed\n",
         "\n",
-        "The cell below should return 'started'\n",
+        "The cell below should return `started`\n",
         "\n",
         "\n"
       ],
@@ -236,7 +288,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Query with Reranking"
+        "# Query with Reranking\n",
+        "\n",
+        "This containes a `text_similarity_reranker` retriever which:\n",
+        "1. Uses a Standard Retriever to :\n",
+        "    1. Perform a semantic query against the chunked ELSER embeddings\n",
+        "    2. Return the top 2 inner hit chunks\n",
+        "2. Perform a reranking:\n",
+        "    1. Taks as input the top 50 results from the previous search\n",
+        "      - `\"rank_window_size\": 50`\n",
+        "    2. Taks as input the uer's question\n",
+        "      - `\"inference_text\": USER_QUESTION`\n",
+        "    3.  Uses our previously created reranking API and model\n"
       ],
       "metadata": {
         "id": "2bwvzLfRjJ2n"
@@ -251,36 +314,36 @@
         "    index=\"restaurant_reviews\",\n",
         "    body={\n",
         "      \"retriever\": {\n",
-        "    \"text_similarity_reranker\": {\n",
-        "      \"retriever\": {\n",
-        "        \"standard\": {\n",
-        "          \"query\": {\n",
-        "            \"nested\": {\n",
-        "              \"path\": \"semantic_body.inference.chunks\",\n",
+        "        \"text_similarity_reranker\": {\n",
+        "          \"retriever\": {\n",
+        "            \"standard\": {\n",
         "              \"query\": {\n",
-        "                \"sparse_vector\": {\n",
-        "                  \"inference_id\": \"my-elser-endpoint\",\n",
-        "                  \"field\": \"semantic_body.inference.chunks.embeddings\",\n",
-        "                  \"query\": USER_QUESTION\n",
+        "                \"nested\": {\n",
+        "                  \"path\": \"semantic_body.inference.chunks\",\n",
+        "                  \"query\": {\n",
+        "                    \"sparse_vector\": {\n",
+        "                      \"inference_id\": \"my-elser-endpoint\",\n",
+        "                      \"field\": \"semantic_body.inference.chunks.embeddings\",\n",
+        "                      \"query\": USER_QUESTION\n",
+        "                    }\n",
+        "                  },\n",
+        "                  \"inner_hits\": {\n",
+        "                    \"size\": 2,\n",
+        "                    \"name\": \"restaurant_reviews.semantic_body\",\n",
+        "                    \"_source\": [\n",
+        "                      \"semantic_body.inference.chunks.text\"\n",
+        "                    ]\n",
+        "                  }\n",
         "                }\n",
-        "              },\n",
-        "              \"inner_hits\": {\n",
-        "                \"size\": 2,\n",
-        "                \"name\": \"restaurant_reviews.semantic_body\",\n",
-        "                \"_source\": [\n",
-        "                  \"semantic_body.inference.chunks.text\"\n",
-        "                ]\n",
         "              }\n",
         "            }\n",
-        "          }\n",
+        "          },\n",
+        "          \"field\": \"Review\",\n",
+        "          \"inference_id\": \"semantic-reranking\",\n",
+        "          \"inference_text\": USER_QUESTION,\n",
+        "          \"rank_window_size\": 50\n",
         "        }\n",
-        "      },\n",
-        "      \"field\": \"Review\",\n",
-        "      \"inference_id\": \"semantic-reranking\",\n",
-        "      \"inference_text\": USER_QUESTION,\n",
-        "      \"rank_window_size\": 50\n",
-        "    }\n",
-        "  }\n",
+        "      }\n",
         "    }\n",
         ")\n",
         "\n",
