--- a/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
+++ b/vectordb-genai-101/GenAI_VectorDB_&_RAG_101_Challenge_8.ipynb
@@ -1,31 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "**Locally Hosted Semantic Reranker**"
-      ],
       "metadata": {
         "id": "bW9q8qD_bPhY"
-      }
+      },
+      "source": [
+        "**Locally Hosted Semantic Reranker**"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Mf09mgBb5Bb9"
+      },
       "source": [
         "# Objectives\n",
         "\n",
@@ -33,13 +21,13 @@
         "- Learn how to load a semantic reranker into Elasticsearch with Eland\n",
         "- Create a reranker inference API\n",
         "- Modify the query to use the reranker as part of the query to gather contextual documents"
-      ],
-      "metadata": {
-        "id": "Mf09mgBb5Bb9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hn5LrtoIrzBs"
+      },
       "source": [
         "## If this is your first time using Jupyter notebook:\n",
         "\n",
@@ -51,33 +39,30 @@
         "\n",
         "<img src=\"https://play.instruqt.com/assets/tracks/xh4efwjkleh1/0fd068121e9d48f13b49d8e02a21fe42/assets/CleanShot%202024-09-12%20at%2014.09.32%402x.png\" width=\"150\"/>\n",
         "If there is an error, you will see a red x and may see error output below"
-      ],
-      "metadata": {
-        "id": "hn5LrtoIrzBs"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BecBOzyDbWik"
+      },
       "source": [
         "# Setup\n",
         "\n",
         "Run the cells in this section to:\n",
         "- Import the required libraries\n",
         "- Create an elasticsearch python client connection\n"
-      ],
-      "metadata": {
-        "id": "BecBOzyDbWik"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6ayhDP72bZAe"
+      },
       "source": [
         "These should already be installed in your notebook environment.\n",
         "You can uncomment and run if needed"
-      ],
-      "metadata": {
-        "id": "6ayhDP72bZAe"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -93,15 +78,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Import the required python libraries"
-      ],
       "metadata": {
         "id": "LgHQaJh0bmJQ"
-      }
+      },
+      "source": [
+        "Import the required python libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CsL466H0bjNX"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "from elasticsearch import Elasticsearch, helpers, exceptions\n",
@@ -109,38 +99,36 @@
         "from getpass import getpass\n",
         "import json\n",
         "import time"
-      ],
-      "metadata": {
-        "id": "CsL466H0bjNX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Create an Elasticsearch Python client"
-      ],
       "metadata": {
         "id": "gsQ4XIpkbpd4"
-      }
+      },
+      "source": [
+        "Create an Elasticsearch Python client"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "P8Pf-lDepKdv"
+      },
+      "outputs": [],
       "source": [
         "es = Elasticsearch(\n",
         "    hosts = [\"http://kubernetes-vm:9200\"],\n",
         "    basic_auth=(\"elastic\", \"changeme\")\n",
         ")"
-      ],
-      "metadata": {
-        "id": "P8Pf-lDepKdv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5bsLLnqCfNKk"
+      },
       "source": [
         "# Upload Hugging Face model with Eland\n",
         "Run this cell to:\n",
@@ -151,13 +139,15 @@
         "<br><br>\n",
         "**Note**:\n",
         "While we are importing the model for use as a reranker, Eland and Elasticsearch do not have a dedicated rerank task type, so we still use `text_similarity`"
-      ],
-      "metadata": {
-        "id": "5bsLLnqCfNKk"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J2MTEYrUfk9R"
+      },
+      "outputs": [],
       "source": [
         "MODEL_ID = \"cross-encoder/ms-marco-MiniLM-L-6-v2\"\n",
         "\n",
@@ -167,15 +157,13 @@
         "  -p \"changeme\" \\\n",
         "  --hub-model-id $MODEL_ID \\\n",
         "  --task-type text_similarity"
-      ],
-      "metadata": {
-        "id": "J2MTEYrUfk9R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-rrQV6SAgWz8"
+      },
       "source": [
         "# Create Inference Endpoint\n",
         "Run this cell to:\n",
@@ -191,13 +179,15 @@
         "    - Threads per allocation affect the number of threads used by each allocation during inference. Scaling this generally increased the speed of inference requests (to a point).\n",
         "- `model_id` - This is the id of the model as it is named in Elasticsearch\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "-rrQV6SAgWz8"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Abu084BYgWCE"
+      },
+      "outputs": [],
       "source": [
         "model_config = {\n",
         "  \"service\": \"elasticsearch\",\n",
@@ -220,15 +210,13 @@
         ")\n",
         "\n",
         "create_endpoint.body"
-      ],
-      "metadata": {
-        "id": "Abu084BYgWCE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "X8rQXMrHhMkS"
+      },
       "source": [
         "###Verify it was created\n",
         "\n",
@@ -237,56 +225,56 @@
         "- The model has been deployed\n",
         "\n",
         "You should see JSON output with information about the semantic endpoint"
-      ],
-      "metadata": {
-        "id": "X8rQXMrHhMkS"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "n3Yk7rgYhP-N"
+      },
+      "outputs": [],
       "source": [
         "check_endpoint = es.inference.get(\n",
         "    inference_id=inference_id,\n",
         ")\n",
         "\n",
         "check_endpoint.body"
-      ],
-      "metadata": {
-        "id": "n3Yk7rgYhP-N"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6dqYN5B4gI7v"
+      },
       "source": [
         "Verify the model was successfully deployed\n",
         "\n",
         "The cell below should return `started`\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "6dqYN5B4gI7v"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tui0K4JIgNmf"
+      },
+      "outputs": [],
       "source": [
         "ES_MODEL_ID = \"cross-encoder__ms-marco-minilm-l-6-v2\"\n",
         "\n",
         "model_info = es.ml.get_trained_models_stats(model_id=ES_MODEL_ID)\n",
         "\n",
         "model_info.body['trained_model_stats'][0]['deployment_stats']['nodes'][0]['routing_state']['routing_state']"
-      ],
-      "metadata": {
-        "id": "tui0K4JIgNmf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2bwvzLfRjJ2n"
+      },
       "source": [
         "# Query with Reranking\n",
         "\n",
@@ -300,18 +288,20 @@
         "    2. Taks as input the uer's question\n",
         "      - `\"inference_text\": USER_QUESTION`\n",
         "    3.  Uses our previously created reranking API and model\n"
-      ],
-      "metadata": {
-        "id": "2bwvzLfRjJ2n"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HWXQBS35jQ3n"
+      },
+      "outputs": [],
       "source": [
-        "USER_QUESTION = \"Where can I get good pizza?\"\n",
+        "USER_QUESTION = \"belongil beach\"\n",
         "\n",
         "response = es.search(\n",
-        "    index=\"restaurant_reviews\",\n",
+        "    index=\"hotels\",\n",
         "    body={\n",
         "      \"retriever\": {\n",
         "        \"text_similarity_reranker\": {\n",
@@ -319,62 +309,70 @@
         "            \"standard\": {\n",
         "              \"query\": {\n",
         "                \"nested\": {\n",
-        "                  \"path\": \"semantic_body.inference.chunks\",\n",
+        "                  \"path\": \"semantic_description_elser.inference.chunks\",\n",
         "                  \"query\": {\n",
         "                    \"sparse_vector\": {\n",
         "                      \"inference_id\": \"my-elser-endpoint\",\n",
-        "                      \"field\": \"semantic_body.inference.chunks.embeddings\",\n",
+        "                      \"field\": \"semantic_description_elser.inference.chunks.embeddings\",\n",
         "                      \"query\": USER_QUESTION\n",
         "                    }\n",
         "                  },\n",
         "                  \"inner_hits\": {\n",
         "                    \"size\": 2,\n",
-        "                    \"name\": \"restaurant_reviews.semantic_body\",\n",
+        "                    \"name\": \"hotels.semantic_description_elser\",\n",
         "                    \"_source\": [\n",
-        "                      \"semantic_body.inference.chunks.text\"\n",
+        "                      \"semantic_description_elser.inference.chunks.text\"\n",
         "                    ]\n",
         "                  }\n",
         "                }\n",
         "              }\n",
         "            }\n",
         "          },\n",
-        "          \"field\": \"Review\",\n",
+        "          \"field\": \"combined_fields\",\n",
         "          \"inference_id\": \"semantic-reranking\",\n",
         "          \"inference_text\": USER_QUESTION,\n",
         "          \"rank_window_size\": 50\n",
         "        }\n",
         "      }\n",
         "    }\n",
-        ")\n",
-        "\n",
-        "response.raw"
-      ],
-      "metadata": {
-        "id": "HWXQBS35jQ3n"
-      },
-      "execution_count": null,
-      "outputs": []
+        ")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Print out the formatted response"
-      ],
       "metadata": {
         "id": "A0HyNZoWyeun"
-      }
+      },
+      "source": [
+        "Print out the formatted response"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for review in response.raw['hits']['hits']:\n",
-        "    print(f\"Restaurant {review['_source']['Restaurant']} - Rating: {review['_source']['Rating']} - Reviewer: {review['_source']['Reviewer']}\")\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4ZEx-46rn3in"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "for hotel in response.raw['hits']['hits']:\n",
+        "    print(f\"Description {hotel['_source']['Description']} - Rating: {hotel['_source']['HotelRating']}\")"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
